# bot-claude

./: .env.example  .gitignore  3_COIN_STRATEGY_RESULTS.md  50_PERCENT_ACHIEVED.md  5_YEAR_STRATEGY_COMPARISON.md  6_COIN_STRATEGY_RESULTS.md  6_YEAR_BENCHMARK_RESULTS.md  CONSERVATIVE_5YEAR_STRATEGY.md  Cargo.toml  DUAL_STRATEGY_ACHIEVEMENT.md  FINAL_RESULTS.md  PERFORMANCE_COMPARISON.md  README.md  STRATEGY_PROFILES.md  ULTRA_AGGRESSIVE_ACHIEVEMENT.md  analysis_asset_selection.md  analysis_exit_optimization.md  analysis_fee_optimization.md  analysis_signal_quality.md  backtest_aggressive.json  backtest_aggressive_no_pm.json  backtest_aggressive_with_pm.json  backtest_conservative.json  backtest_conservative_no_pm.json  backtest_conservative_with_pm.json  backtest_moderate.json  backtest_results.json  config.toml.example  improvements_01-13-2026.md  optimization_summary_01-14-2026.md  prompt.md
models/: random_forest.onnx  xgboost.onnx
scripts/: requirements.txt  train_ensemble.py
src/: main.rs
src/analytics/: mod.rs
src/config/: manager.rs  mod.rs  profiles.rs  runtime.rs
src/database/: mod.rs
src/engine/: backtest.rs  controller.rs  executor.rs  mod.rs  paper.rs  portfolio.rs  portfolio.rs.bak2  results.rs  signal_collector.rs
src/exchange/: binance.rs  mod.rs  orderbook.rs  websocket.rs
src/indicators/: atr.rs  bollinger.rs  ema.rs  macd.rs  mod.rs  rsi.rs  volume.rs
src/ml/: features.rs  mod.rs  model.rs  tracker.rs
src/ml/ensemble/: aggregator.rs  mod.rs  onnx_model.rs
src/ml/hmm/: features.rs  (+3 more)
src/notifications/: mod.rs
src/risk/: limits.rs  manager.rs  mod.rs
src/strategies/: combined.rs  improved.rs  mean_reversion.rs  mod.rs  momentum.rs  trend.rs
src/types/: candle.rs  mod.rs  order.rs  position.rs  position.rs.bak  trading.rs
src/web/: api.rs  mod.rs  server.rs  state.rs
(+1 files in other folders)
