[package]
name = "crypto_trading_bot"
version = "0.1.0"
edition = "2021"
authors = ["Trading Bot"]
description = "Production-ready automated cryptocurrency trading bot for Binance.US"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto for API signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"
toml = "0.8"

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Decimal math for financial calculations
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

# Rate limiting
governor = "0.6"

# UUID for order IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Persistent storage for state
sled = "0.34"

# Database for trade history and analytics
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "rust_decimal"] }

# Web server for dashboard
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# HTML templating
askama = "0.12"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
